--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ mlflow
 opencv-python
 pytorch-lightning==1.6.0
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==1.11.0
+torch==1.11.0+cu102
 -f  https://download.pytorch.org/whl/torch_stable.html
 torchvision==0.12.0+cu102
 torchtext==0.12.0
